--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,6 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root></app-root>
-  <app-editor></app-editor>
+  <app-main></app-main>
 </body>
 </html>
